--- a/trello/src/style.css
+++ b/trello/src/style.css
@@ -123,7 +123,6 @@
     flex-direction: column;
     gap: .5rem;
     padding-top: 60px;
-    overflow: hidden;
 
     &:focus { outline: 0px; }
 }
@@ -147,6 +146,7 @@
     margin-top: .25rem;
 }
 /* ---- CREATE.TAGS ---- */
+.tags { position: relative; }
 .btn-more{
     padding: .5rem .75rem;
     border-radius: 4px;
@@ -155,6 +155,45 @@
     justify-content: center;
     align-items: center;
 }
+.modal-tag{
+    position: absolute;
+    z-index: 5;
+    top: 0px;
+    left: -270px;
+    width: 220px;
+    min-height: 100px;
+    height: fit-content;
+    background-color: var(--bg-2);
+    box-shadow: 0px 5px 10px rgba(0 0 0 / 35%);
+    padding: 1rem;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+.icon-close{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    cursor: pointer;
+    transition: all .2s ease-in;
+
+    &:hover{ opacity: .5; }
+}
+.modal-tag .editable-input { margin-top: 1.25rem; }
+.list-tags{
+    display: flex;
+    flex-wrap: wrap;
+    gap: .25rem;
+}
+.tag-item{
+    height: fit-content;
+    padding: .5rem .75rem;
+    border-radius: 8px;
+    background-color: var(--bg-3);
+    cursor: pointer;
+}
+.tag-item.select { background-color: var(--button); }
 /* ---- DESCRIPTION ---- */
 .desc{
     display: flex;
@@ -196,10 +235,19 @@ textarea{
 
     &:hover { background-color: #00000070; }
 }
+.desc-title{
+    width: 100%;
+    height: 6rem;
+    background-color: var(--bg-2);
+    margin-top: .25rem;
+    border-radius: 8px;
+    padding: 1rem;
+    font-weight: normal;
+}
 /* ---- MODAL.THUMB ---- */
 .thumb-list{
-    width: 300px;
-    height: fit-content;
+    max-width: 315px;
+    background-color: var(--bg-2);
     padding: 1rem;
     border-radius: 8px;
     display: flex;
@@ -207,6 +255,7 @@ textarea{
     justify-content: flex-end;
     align-items: center;
     gap: .5rem;
+    margin-right: 1rem;
 }
 .color{
     width: 50px;
